ms2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-2-deployment
  labels:
    app: microservice-2
spec:
  selector:
    matchLabels:
      app: microservice-2
  replicas: 1
  template:
    metadata:
      labels:
        app: microservice-2
    spec:
      containers:
      - name: microservice-2
        image: aunghtayoo/microservice-2:1.0.0
        ports:
        - containerPort: 8002
        resources:
          limits:
            memory: 256Mi
            cpu: "250m"
          requests:
            memory: 128Mi
            cpu: "80m"
